<resources>
    <string name="app_name">Project</string>
    <string name="subscribed_devices">Subscribed devices:</string>
    <string name="nearby_devices">Nearby devices</string>
    <string name="scanning_status">Scanning status:</string>
    <string name="choose_action">Choose action:</string>
    <string name="device_details">Device details</string>
    <string name="save">Save</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="previous_locations">Previous locations</string>
    <string name="name">Name</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="times_seen">Times seen</string>
    <string name="last_seen">Last seen</string>
    <string name="last_location">Last location</string>
    <string name="settings">Settings</string>
    <string name="scan_now">Scan now</string>
    <string name="empty_subscribed_list">You are not subscribed to any device</string>
    <string name="sample_location">Sample location</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="broad_capture_duration">Broad capture duration</string>
    <string name="narrow_capture_duration">Narrow capture duration</string>
    <string name="save_settings">Save settings</string>
    <string name="broadCaptureDuration_error">Broad capture duration should be between 1 and 100</string>
    <string name="narrowCaptureDuration_error">Narrow capture duration should be between 1 and 100.</string>
    <string name="settings_updated">Settings updated.</string>
    <string name="title_activity_scanning">Scanning</string>
    <string name="scaning_activity_unsubscribe_fragment_title">Subscribed</string>
    <string name="detected_unsubscribed_clients_fragment_title">Unsubscribed</string>
    <string name="scanning_activity_subscribe_option">Subscribe</string>
    <string name="scanning_activity_unsubscribe_option">Unsubscribe</string>
</resources>
